Fix: Implement proper Telegram Web App integration
- Add proper data sending to Telegram bot via tg.sendData()
- Implement signature validation before sending
- Add Telegram-specific UI adaptations (MainButton, theme support)
- Create notification system for user feedback
- Add bot handler example for receiving signature data
- Improve mobile responsiveness and touch handling
- Update documentation with complete setup instructions

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Signature Draw - Telegram Mini App</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Telegram Web App SDK -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <meta name="description" content="Draw and save your digital signature">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <div class="container">
